# dbg64_plugins

./: Cargo.toml  README.md  build.rs
pluginsdk/: bridgemain.h  x32bridge.lib  x32dbg.lib  x64bridge.lib  x64dbg.lib
src/: lib.rs
