[package]
name = "dbg64_plugins_sdk_sys"
version = "0.1.4"
edition = "2021"
build="build.rs"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/dbg64_plugins"
documentation = "https://docs.rs/dbg64_plugins_sdk_sys"
description = "dbg64 plugins sdk sys"

[lib]
crate-type=["rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59"

