[package]
name = "x64dbg_sdk_sys"
version = "0.1.0"
edition = "2021"
build="build.rs"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/dbg64_plugins"
documentation = "https://docs.rs/x64dbg_sdk_sys"
description = "x64dbg plugins sdk sys"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[lib]
crate-type=["rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["x64"]
x64=[]
x86=[]

[dependencies]

[build-dependencies]
bindgen = "0.59"
cfg-if = "1"
